[package]
name = "winter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
cassowary = "0.3.0"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.10"
winapi = { version = "0.3.9", features = [
    "wincon",
    "fileapi",
    "processenv",
    "consoleapi",
] }
